--- a/index.html
+++ b/index.html
@@ -870,9 +870,7 @@ COCO Nails offer a full variety of manicure services including nail polish, acry
                         <div class="col-6">
                             <ul>
                                 <li>Open Hour<br>
-                                    <span>[Mon] 9:00 AM - 7:00 PM</span> <br>
-                                    <span>[Tue] Closed</span> <br>
-                                    <span>[Web - Sat] 9:00 AM - 7:00 PM</span> <br>
+                                    <span>[Mon - Sat] 9:00 AM - 7:00 PM</span> <br>
                                     <span>[Sun] 11:00 AM - 5:00 PM</span>
 
                                 </li>
