--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#men">Specialties</a></li>
-                            <li class="scroll-to-section"><a href="#women">Services</a></li>
-                            <li class="scroll-to-section"><a href="#kids">Gallery</a></li>
+                            <li class="scroll-to-section"><a href="#specialties">Specialties</a></li>
+                            <li class="scroll-to-section"><a href="#services">Services</a></li>
+                            <li class="scroll-to-section"><a href="#gallery">Gallery</a></li>
                             <li><a target="_blank" href="https://www.lldtek.com/salon/appt/Mzg2MTh8Y29jbzUwMXxNT18wNzQyNnw1NWI3ODhiMWEyMzdmZDBhZDIyYmFiMzI2MDYwY2U3OQ==">Appointment</a></li>
-                            <li class="scroll-to-section"><a href="#explore">About Us</a></li>
+                            <li class="scroll-to-section"><a href="#about">About Us</a></li>
                         </ul>        
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -103,7 +103,7 @@
                                                 <h4 class="text-dark-gold">Special</h4>
                                                 <p>Best Nails Design For You</p>
                                                 <div class="main-border-button">
-                                                    <a href="#men">View More</a>
+                                                    <a href="#specialties">View More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -123,7 +123,7 @@
                                                 <h4 class="text-dark-gold">Services</h4>
                                                 <p>We Have Many Services</p>
                                                 <div class="main-border-button">
-                                                    <a href="service.html">View More</a>
+                                                    <a href="#services">View More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -163,7 +163,7 @@
                                                 <h4  class="text-dark-gold">Gallery</h4>
                                                 <p>Top Best Ever Finished</p>
                                                 <div class="main-border-button">
-                                                    <a href="#kids">View More</a>
+                                                    <a href="#gallery">View More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -179,7 +179,7 @@
     </div>
     <!-- ***** Appointment ***** -->  
     <!-- ***** Men Appointment ***** -->
-    <section class="section" id="men">
+    <section class="section" id="specialties">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -358,7 +358,7 @@
     <!-- ***** Men Area Ends ***** -->
 
     <!-- ***** Women Area Starts ***** -->
-    <section class="section" id="women">
+    <section class="section" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -560,7 +560,7 @@
     <!-- ***** Women Area Ends ***** -->
 
     
-    <section class="section" id="kids">
+    <section class="section" id="gallery">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -648,7 +648,7 @@
 
 
     <!-- ***** Explore Area Starts ***** -->
-    <section class="section" id="explore">
+    <section class="section" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -904,16 +904,16 @@ COCO Nails offer a full variety of manicure services including nail polish, acry
                 <div class="col-md-6 col-lg-3">
                     <h4>Special &amp; Services</h4>
                     <ul>
-                        <li><a href="#men">Specialties</a></li>
-                        <li><a href="#women">Services</a></li>
-                        <li><a href="#kids">Gallery</a></li>
+                        <li><a href="#specialties">Specialties</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#gallery">Gallery</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <h4>Links</h4>
                     <ul>
                         <li><a href="#index.html">Homepage</a></li>
-                        <li><a href="#explore">About Us</a></li>
+                        <li><a href="#about">About Us</a></li>
                         <li><a target=_blank href="https://www.lldtek.com/salon/appt/Mzg2MTh8Y29jbzUwMXxNT18wNzQyNnw1NWI3ODhiMWEyMzdmZDBhZDIyYmFiMzI2MDYwY2U3OQ==">Appointment</a></li>
                     </ul>
                 </div>
