--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@ COCO Nails offer a full variety of manicure services including nail polish, acry
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location<br><span> 501 S Madison St, Ste. N  Webb City, MO 64870</span></li>
+                                <li>Store Location<br><span> 501 S Madison St N, Webb City, MO 64870</span></li>
                                 <li>Phone<br><span>(417) 717-0594</span></li>
                                 <li>Office Location<br><span>Webb City, MO </span></li>
                             </ul>
@@ -895,7 +895,7 @@ COCO Nails offer a full variety of manicure services including nail polish, acry
                             <img src="assets/images/coco-nails-logo.png" alt="Coco Nails">
                         </div>
                         <ul>
-                            <li><a href="#"> 501 S Madison St,Ste. N  Webb City, MO 64870</a></li>
+                            <li><a href="#"> 501 S Madison St N, Webb City, MO 64870</a></li>
                             <li><a href="#">hoanngoc1998@yahoo.com</a></li>
                             <li><a href="#">(417) 717-0594</a></li>
                         </ul>
